--- a/index.html
+++ b/index.html
@@ -1,9 +1,123 @@
-<!doctype html>
-<html lang="en" data-n-head="%7B%22lang%22:%7B%221%22:%22en%22%7D%7D">
-  <head>
-    <title>Adi is a dev</title><meta data-n-head="1" charset="utf-8"><meta data-n-head="1" name="viewport" content="width=device-width,initial-scale=1"><meta data-n-head="1" data-hid="description" name="description" content="Adrian's portfolio website"><meta data-n-head="1" name="format-detection" content="telephone=no"><meta data-n-head="1" name="google-site-verification" content="wc5Rex4lj1jvII1lLlHZWll_3LFKDvLFrZQ1cO0xrWE"><meta data-n-head="1" data-hid="og-url" property="og:url" content="https://adi.is-a.dev"><meta data-n-head="1" data-hid="og-image" property="og:image" content="https://media-exp1.licdn.com/dms/image/D5603AQEaxwA2vWOr-w/profile-displayphoto-shrink_200_200/0/1670525231585?e=1675900800&v=beta&t=7wvHJJ0XTtADoPHulU-b_0GEQt--UbcfwK8DZP1twWo"><meta data-n-head="1" data-hid="og-title" property="og:title" content="Adrian Radores Personal Website"><meta data-n-head="1" data-hid="og-desc" property="og:description" content="I'm Adrian Radores. A web programmer from The Philippines"><link rel="preload" href="/_nuxt/43664e5.js" as="script"><link rel="preload" href="/_nuxt/8d05164.js" as="script"><link rel="preload" href="/_nuxt/de5e3f7.js" as="script"><link rel="preload" href="/_nuxt/09095bd.js" as="script">
-  </head>
-  <body>
-    <div id="__nuxt"><style>#nuxt-loading{background:#fff;visibility:hidden;opacity:0;position:absolute;left:0;right:0;top:0;bottom:0;display:flex;justify-content:center;align-items:center;flex-direction:column;animation:nuxtLoadingIn 10s ease;-webkit-animation:nuxtLoadingIn 10s ease;animation-fill-mode:forwards;overflow:hidden}@keyframes nuxtLoadingIn{0%{visibility:hidden;opacity:0}20%{visibility:visible;opacity:0}100%{visibility:visible;opacity:1}}@-webkit-keyframes nuxtLoadingIn{0%{visibility:hidden;opacity:0}20%{visibility:visible;opacity:0}100%{visibility:visible;opacity:1}}#nuxt-loading>div,#nuxt-loading>div:after{border-radius:50%;width:5rem;height:5rem}#nuxt-loading>div{font-size:10px;position:relative;text-indent:-9999em;border:.5rem solid #f5f5f5;border-left:.5rem solid #000;-webkit-transform:translateZ(0);-ms-transform:translateZ(0);transform:translateZ(0);-webkit-animation:nuxtLoading 1.1s infinite linear;animation:nuxtLoading 1.1s infinite linear}#nuxt-loading.error>div{border-left:.5rem solid #ff4500;animation-duration:5s}@-webkit-keyframes nuxtLoading{0%{-webkit-transform:rotate(0);transform:rotate(0)}100%{-webkit-transform:rotate(360deg);transform:rotate(360deg)}}@keyframes nuxtLoading{0%{-webkit-transform:rotate(0);transform:rotate(0)}100%{-webkit-transform:rotate(360deg);transform:rotate(360deg)}}</style><script>window.addEventListener("error",function(){var e=document.getElementById("nuxt-loading");e&&(e.className+=" error")})</script><div id="nuxt-loading" aria-live="polite" role="status"><div>Loading...</div></div></div><script>window.__NUXT__={config:{_app:{basePath:"/",assetsPath:"/_nuxt/",cdnURL:null}}}</script>
-  <script src="/_nuxt/43664e5.js"></script><script src="/_nuxt/8d05164.js"></script><script src="/_nuxt/de5e3f7.js"></script><script src="/_nuxt/09095bd.js"></script></body>
+<!DOCTYPE html>
+<html lang="en">
+	<head>
+		<meta charset="UTF-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<title>rakit</title>
+		<link rel="stylesheet" href="style.css">
+	</head>
+
+	<body class="bg outfit">
+		<div class="grid"></div>
+		<div class="content">
+
+			<nav>
+				<ul class="">
+					<li><a href="/home/adichan/scratch/badjao/projects.html">Projects</a></li>
+					<li><a href="/home/adichan/scratch/badjao/projects.html">Scratch</a></li>
+				</ul>
+			</nav>
+
+			<div class="container">
+				<div class="greeting"> 
+					<div> 
+				<h1>
+					Hey, I'm Adrian
+				</h1>
+				<div>
+
+						 Dec 1995 <br/>
+						Caloocan, Philippines
+
+						</div>
+</div>
+				<img class="avatar" src="./zen.jpg" />
+				</div>
+
+				<div class="card">
+					<h2>Current Tech Stack</h2>
+
+					<div class="container-grid description">
+						<div>
+							<span class="container-grid-title"> Backend:</span> <span class="description-list"> PHP, Laravel, PostgreSQL, Redis, Pest</span>
+						</div>
+
+						<div>
+							<span class="container-grid-title"> Frontend:</span> <span class="description-list"> React, Inertia, TailwindCSS</span>
+						</div>
+
+						<div>
+							<span class="container-grid-title"> CI/CD:</span> <span class="description-list"> Github Actions</span>
+						</div>
+
+						<div>
+							<span class="container-grid-title"> Monitoring:</span> <span class="description-list"> Prometheus, Grafana, Uptime Kuma</span>
+</div>
+
+						<div>
+
+														<span class="container-grid-title"> Production:</span> <span class="description-list">AWS, Hetzner, Stripe, Brevo, Namecheap </span>
+						</div>
+
+						<div>
+														<span class="container-grid-title"> Local Development:</span> <span class="description-list"> Linux, Docker, Tmux, Neovim, Kitty</span>
+						</div>
+					</div>
+				</div>
+
+
+					<h2>Experience</h2>
+
+				<div class="timeline">
+  <div class="timeline-item">
+    <div class="timeline-dot"></div>
+    <div class="timeline-content">
+	  <span class="date-worked">2022 - 2024</span>
+      <h2>Full Time Web Developer</h2>
+      <h3>ChanzIT Business Solutions</h3>
+      <p >Developed and maintained web applications for clients in the Netherlands.</p>
+	  <span class="languages">PHP, Laravel, Codeigniter, MySQL, Vue, Inertia, CraftCMS</span>
+    </div>
+  </div>
+
+
+  <div class="timeline-item">
+    <div class="timeline-dot"></div>
+    <div class="timeline-content">
+      <span>2019 - 2022</span>
+	  <h2>System Administrator</h2>
+      <h3>U+ Realty</h3>
+      <p>Developed and maintained an app for real estate management.</p>
+	  <span class="languages">C#, ASP.NET, React, PostgreSQL, Hetzner</span>
+    </div>
+  </div>
+
+
+  <div class="timeline-item">
+    <div class="timeline-dot"></div>
+    <div class="timeline-content">
+      <span>2017 - 2019</span>
+	  <h2>Instructor</h2>
+      <h3>St. Agnes Academy of Caloocan City</h3>
+	  <p>Taught programming and web development to senior high school students. Developed an Enrollment System.</p>
+	  <span class="languages">C, HTML, CSS, PHP, Java, Wordpress, Photoshop</span>
+    </div>
+  </div>
+</div>
+
+</div>
+
+
+
+
+			</div>
+
+
+
+		</div>
+
+	</body>
+
+
 </html>
+
