--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 	<body class="bg outfit">
 		<div class="grid"></div>
-		<div class="content">
+		<div class="main-wrapper">
 
 			<nav>
 				<ul class="">
@@ -31,7 +31,7 @@
 
 						</div>
 </div>
-				<img class="avatar" src="./zen.jpg" />
+				<img class="avatar" src="./zen20.webp" />
 				</div>
 
 				<div class="card">
