--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<title>rakit</title>
+		<title>Adrian</title>
 		<link rel="stylesheet" href="style.css">
 	</head>
 
@@ -19,6 +19,7 @@
 			</nav>
 
 			<div class="container">
+				<div> 
 				<div class="greeting"> 
 					<div> 
 				<h1>
@@ -26,12 +27,32 @@
 				</h1>
 				<div>
 
-						 Dec 1995 <br/>
+						<div class="icon-with-text"><svg  xmlns="http://www.w3.org/2000/svg"  width="24"  height="24"  viewBox="0 0 24 24"  fill="none"  stroke="currentColor"  stroke-width="2"  stroke-linecap="round"  stroke-linejoin="round"  class="icon icon-tabler icons-tabler-outline icon-tabler-gift"><path stroke="none" d="M0 0h24v24H0z" fill="none"/><path d="M3 8m0 1a1 1 0 0 1 1 -1h16a1 1 0 0 1 1 1v2a1 1 0 0 1 -1 1h-16a1 1 0 0 1 -1 -1z" /><path d="M12 8l0 13" /><path d="M19 12v7a2 2 0 0 1 -2 2h-10a2 2 0 0 1 -2 -2v-7" /><path d="M7.5 8a2.5 2.5 0 0 1 0 -5a4.8 8 0 0 1 4.5 5a4.8 8 0 0 1 4.5 -5a2.5 2.5 0 0 1 0 5" /></svg> Dec 1995 </div>  
+								<div class="icon-with-text"> 
+
+									<svg  xmlns="http://www.w3.org/2000/svg"  width="24"  height="24"  viewBox="0 0 24 24"  fill="none"  stroke="currentColor"  stroke-width="2"  stroke-linecap="round"  stroke-linejoin="round"  class="icon icon-tabler icons-tabler-outline icon-tabler-map-pin"><path stroke="none" d="M0 0h24v24H0z" fill="none"/><path d="M9 11a3 3 0 1 0 6 0a3 3 0 0 0 -6 0" /><path d="M17.657 16.657l-4.243 4.243a2 2 0 0 1 -2.827 0l-4.244 -4.243a8 8 0 1 1 11.314 0z" /></svg>
 						Caloocan, Philippines
+</div>
+
+
 
 						</div>
 </div>
+						<div class="right-side"> 
 				<img class="avatar" src="./zen20.webp" />
+							<ul class="flex-row socials">
+								<li href="#"><a href=""> <svg  xmlns="http://www.w3.org/2000/svg"  width="24"  height="24"  viewBox="0 0 24 24"  fill="none"  stroke="currentColor"  stroke-width="2"  stroke-linecap="round"  stroke-linejoin="round"  class="icon icon-tabler icons-tabler-outline icon-tabler-mail"><path stroke="none" d="M0 0h24v24H0z" fill="none"/><path d="M3 7a2 2 0 0 1 2 -2h14a2 2 0 0 1 2 2v10a2 2 0 0 1 -2 2h-14a2 2 0 0 1 -2 -2v-10z" /><path d="M3 7l9 6l9 -6" /></svg> </a></li>
+								<li href="#"><a href=""><svg  xmlns="http://www.w3.org/2000/svg"  width="24"  height="24"  viewBox="0 0 24 24"  fill="none"  stroke="currentColor"  stroke-width="2"  stroke-linecap="round"  stroke-linejoin="round"  class="icon icon-tabler icons-tabler-outline icon-tabler-brand-instagram"><path stroke="none" d="M0 0h24v24H0z" fill="none"/><path d="M4 8a4 4 0 0 1 4 -4h8a4 4 0 0 1 4 4v8a4 4 0 0 1 -4 4h-8a4 4 0 0 1 -4 -4z" /><path d="M9 12a3 3 0 1 0 6 0a3 3 0 0 0 -6 0" /><path d="M16.5 7.5v.01" /></svg></a></li>
+								<li href="#"><a href=""><svg  xmlns="http://www.w3.org/2000/svg"  width="24"  height="24"  viewBox="0 0 24 24"  fill="none"  stroke="currentColor"  stroke-width="2"  stroke-linecap="round"  stroke-linejoin="round"  class="icon icon-tabler icons-tabler-outline icon-tabler-brand-github"><path stroke="none" d="M0 0h24v24H0z" fill="none"/><path d="M9 19c-4.3 1.4 -4.3 -2.5 -6 -3m12 5v-3.5c0 -1 .1 -1.4 -.5 -2c2.8 -.3 5.5 -1.4 5.5 -6a4.6 4.6 0 0 0 -1.3 -3.2a4.2 4.2 0 0 0 -.1 -3.2s-1.1 -.3 -3.5 1.3a12.3 12.3 0 0 0 -6.2 0c-2.4 -1.6 -3.5 -1.3 -3.5 -1.3a4.2 4.2 0 0 0 -.1 3.2a4.6 4.6 0 0 0 -1.3 3.2c0 4.6 2.7 5.7 5.5 6c-.6 .6 -.6 1.2 -.5 2v3.5" /></svg></a></li>
+								<li>
+<a href="">
+									<svg  xmlns="http://www.w3.org/2000/svg"  width="24"  height="24"  viewBox="0 0 24 24"  fill="none"  stroke="currentColor"  stroke-width="2"  stroke-linecap="round"  stroke-linejoin="round"  class="icon icon-tabler icons-tabler-outline icon-tabler-brand-paypal"><path stroke="none" d="M0 0h24v24H0z" fill="none"/><path d="M10 13l2.5 0c2.5 0 5 -2.5 5 -5c0 -3 -1.9 -5 -5 -5h-5.5c-.5 0 -1 .5 -1 1l-2 14c0 .5 .5 1 1 1h2.8l1.2 -5c.1 -.6 .4 -1 1 -1zm7.5 -5.8c1.7 1 2.5 2.8 2.5 4.8c0 2.5 -2.5 4.5 -5 4.5h-2.6l-.6 3.6a1 1 0 0 1 -1 .8l-2.7 0a.5 .5 0 0 1 -.5 -.6l.2 -1.4" /></a></svg>
+								</li>
+							</ul>
+				</div>
+</div>
+
+				<div class="divider"></div>
 				</div>
 
 				<div class="card">
@@ -53,15 +74,15 @@
 						<div>
 							<span class="container-grid-title"> Monitoring:</span> <span class="description-list"> Prometheus, Grafana, Uptime Kuma</span>
 </div>
-
 						<div>
 
 														<span class="container-grid-title"> Production:</span> <span class="description-list">AWS, Hetzner, Stripe, Brevo, Namecheap </span>
 						</div>
 
 						<div>
-														<span class="container-grid-title"> Local Development:</span> <span class="description-list"> Linux, Docker, Tmux, Neovim, Kitty</span>
+														<span class="container-grid-title"> Local Development:</span> <span class="description-list"> Linux, Docker, Tmux, Neovim</span>
 						</div>
+
 					</div>
 				</div>
 
@@ -73,8 +94,8 @@
     <div class="timeline-dot"></div>
     <div class="timeline-content">
 	  <span class="date-worked">2022 - 2024</span>
-      <h2>Full Time Web Developer</h2>
-      <h3>ChanzIT Business Solutions</h3>
+      <h3>Full Time Web Developer</h3>
+      <h4>ChanzIT Business Solutions</h4>
       <p >Developed and maintained web applications for clients in the Netherlands.</p>
 	  <span class="languages">PHP, Laravel, Codeigniter, MySQL, Vue, Inertia, CraftCMS</span>
     </div>
@@ -85,8 +106,8 @@
     <div class="timeline-dot"></div>
     <div class="timeline-content">
       <span>2019 - 2022</span>
-	  <h2>System Administrator</h2>
-      <h3>U+ Realty</h3>
+	  <h3>System Administrator</h3>
+      <h4>U+ Realty</h4>
       <p>Developed and maintained an app for real estate management.</p>
 	  <span class="languages">C#, ASP.NET, React, PostgreSQL, Hetzner</span>
     </div>
@@ -97,8 +118,8 @@
     <div class="timeline-dot"></div>
     <div class="timeline-content">
       <span>2017 - 2019</span>
-	  <h2>Instructor</h2>
-      <h3>St. Agnes Academy of Caloocan City</h3>
+	  <h3>Instructor / Graphic Designer</h3>
+      <h4>St. Agnes Academy of Caloocan City</h4>
 	  <p>Taught programming and web development to senior high school students. Developed an Enrollment System.</p>
 	  <span class="languages">C, HTML, CSS, PHP, Java, Wordpress, Photoshop</span>
     </div>
@@ -107,6 +128,11 @@
 
 </div>
 
+				<div class="card">
+					<h2>Projects</h2>
+				<card>adi</card>
+				</div>
+
 
 
 
@@ -114,7 +140,6 @@
 
 
 
-		</div>
 
 	</body>
 
