--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 	  <span class="date-worked">2022 - 2024</span>
       <h3>Full Time Web Developer</h3>
       <h4>ChanzIT Business Solutions</h4>
-      <p >Developed and maintained web applications for clients in the Netherlands.</p>
+      <p class="satoshi">Developed and maintained web applications for clients in the Netherlands.</p>
 	  <span class="languages">PHP, Laravel, Codeigniter, MySQL, Vue, Inertia, CraftCMS</span>
     </div>
   </div>
@@ -108,7 +108,7 @@
       <span>2019 - 2022</span>
 	  <h3>System Administrator</h3>
       <h4>U+ Realty</h4>
-      <p>Developed and maintained an app for real estate management.</p>
+      <p class="satoshi">Developed and maintained an app for real estate management.</p>
 	  <span class="languages">C#, ASP.NET, React, PostgreSQL, Hetzner</span>
     </div>
   </div>
@@ -120,7 +120,7 @@
       <span>2017 - 2019</span>
 	  <h3>Instructor / Graphic Designer</h3>
       <h4>St. Agnes Academy of Caloocan City</h4>
-	  <p>Taught programming and web development to senior high school students. Developed an Enrollment System.</p>
+	  <p class="satoshi">Taught programming and web development to senior high school students. Developed an Enrollment System.</p>
 	  <span class="languages">C, HTML, CSS, PHP, Java, Wordpress, Photoshop</span>
     </div>
   </div>
